@@ -1,5 +1,6 @@
 Changes for 1.1beta9:
 
+ - better function is_double() (Alexei)
  - fixed host conditions in actions (Alexei)
  - improved filter by hosts and groups (Eugene)
  - fixed processing of trapped items when a key contains '\' (Alexei)
